# cpl-tableaux

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILDING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  IMPLEMENTATION_PLAN_WKRQ.md  INTERFACE_CHANGES_WKRQ.md  MANIFEST.in  OPTIMIZATIONS.md  README.md  README_wKrQ.md  TECHNICAL_ANALYSIS.md  TUTORIALS.md  VERSION.md  WEAK_KLEENE_PLAN.md  builtin_logics.py  classical_components.py  classical_rules.py  cli.py  componentized_tableau.py  demo_componentized.py  ferguson_wkrq_demo.py  formula.py  inference_api.py  logic_mode.py  logic_system.py  mode_aware_cli.py  mode_aware_parser.py  mode_aware_tableau.py  pyproject.toml  setup.py  signed_componentized_rules.py  signed_components.py  signed_formula.py  signed_tableau.py  signed_tableau_rules.py  tableau.py  tableau_core.py  (+48 more)
archive/historical-design-docs/: README.md  TECHNICAL_ANALYSIS.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING_GUIDE.md  CLI_GUIDE.md  TUTORIAL.md  TUTORIALS.md
docs/archive/historical-design-docs/: INTERFACE_CHANGES_WKRQ.md  README.md
examples/: clean_api_demo.py  performance_test.py  show_tweety_tableau.py  tableau_demo.py  tableau_visualization.py  verify_kleene_tables.py  wkrq_countermodel_demo.py  wkrq_theoretical_demo.py
examples/archive/: tutorial3_test.py  tutorial6_test.py  tutorial7_test.py
examples/tutorials/: __init__.py  tutorial1_test.py  tutorial2_test.py  tutorial3_test.py  tutorial4_test.py  tutorial5_test.py
src/tableaux/: __init__.py  api.py  cli.py  extensible_cli.py  parser.py  tableau_core.py  unified_model.py
src/tableaux/core/: __init__.py  formula.py  rules.py  semantics.py  signs.py  tableau_engine.py
src/tableaux/logics/: __init__.py  classical.py  fde.py  logic_system.py  weak_kleene.py  wkrq.py
src/wkrq/: cli.py
tests/: test_basic_functionality.py  test_clean_api.py  test_comprehensive.py  test_countermodels.py  test_fde_extension.py  test_formulas.txt  test_literature_examples.py  test_setup.py  test_wkrq_first_order.py
tests/archive/: test_performance.py
