[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wkrq"
version = "1.0.0"
description = "wKrQ - Weak Kleene logic with restricted quantification for tableau-based theorem proving"
authors = [
    { name = "Bradley Allen", email = "b.p.allen@uva.nl" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
keywords = [
    "tableau", "automated-theorem-proving", "logic", "weak-kleene",
    "three-valued-logic", "restricted-quantification", "formal-methods",
    "propositional-logic", "first-order-logic", "wkrq"
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
wkrq = "wkrq.cli:main"

[project.urls]
"Homepage" = "https://github.com/bradleypallen/tableaux"
"Bug Tracker" = "https://github.com/bradleypallen/tableaux/issues"
"Documentation" = "https://github.com/bradleypallen/tableaux/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
norecursedirs = ["tests/archive"]